<resources>
    <string name="app_name">nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_view_post">View post</string>
    <string name="description_share_post">Share post</string>
    <string name="description_like_post">Like post</string>
    <string name="menu_remove">remove</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">edit</string>
    <string name="button_save">button save</string>
    <string name="cancel_edit">cancel edit</string>
    <string name="edit_message">Edit message</string>
    <string name="icon_edit">icon edit</string>
    <string name="chooser_share_post">Share post</string>
    <string name="not_supported_in_any_application">the action is not supported in any application</string>
    <string name="description_post_save">description_post_save</string>
    <string name="fab">fab</string>
    <string name="play_button">play button</string>
    <string name="google_play_unavailable">google play unavailable</string>
    <string name="channel_remote_name">Server notification</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">%1$s posted a new post:\n %2$s</string>
    <string name="no_posts">no posts</string>
    <string name="internet_error">Internet error</string>
    <string name="retry">retry</string>
    <string name="image_content">image content</string>
    <string name="error_loading">error loading</string>
    <string name="retry_loading">retry loading</string>
    <string name="offline_icon">offline icon</string>
    <string name="recent_posts">recent posts</string>
    <string name="save">save</string>
    <string name="remove">remove</string>
    <string name="preview">preview</string>
    <string name="take_photo">take photo</string>
    <string name="pick_photo">pick photo</string>
    <string name="sign_in">sign_in</string>
    <string name="sign_up">sign_up</string>
    <string name="sign_out">sign_out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="all_fields_must_be_filled_in">All fields must be filled in!</string>
    <string name="passwords_dont_match">Passwords don\'t match!</string>
    <string name="check_pass">check pass</string>
    <string name="go_to_the_authorization_page">Go to the authorization page?</string>
    <string name="the_operation_is_available_only_to_authorized_users">The operation is available only to authorized users.</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_get_out">Are you sure you want to get out?</string>
    <string name="today" >today</string>
    <string name="yesterday" >yesterday</string>
    <string name="last_week" >last week</string>
    <string name="connection_error" translatable="false">Connection error</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>